// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderComponent navigation bar is collapsed by default 1`] = `
<app-header
  isCollapsed={[Function Boolean]}
>
  <header
    class="header"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <span
        class="navbar-brand text"
      >
         Dieter Jordens 
      </span>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="false"
        aria-label="Toggle navigation"
        class="navbar-toggler toggleNavBar"
        data-target="#navbarSupportedContent"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse"
        id="navbarSupportedContent"
      >
        <app-nav-options
          class="mr-auto"
        />
        <app-language-selector />
      </div>
    </nav>
  </header>
</app-header>
`;

exports[`HeaderComponent the toggle button should allow to undo collapse 1`] = `
<app-header
  isCollapsed="false"
>
  <header
    class="header"
  >
    <nav
      class="navbar navbar-expand-lg navbar-light"
    >
      <span
        class="navbar-brand text"
      >
         Dieter Jordens 
      </span>
      <button
        aria-controls="navbarSupportedContent"
        aria-expanded="true"
        aria-label="Toggle navigation"
        class="navbar-toggler toggleNavBar"
        data-target="#navbarSupportedContent"
        data-toggle="collapse"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="collapse navbar-collapse show"
        id="navbarSupportedContent"
      >
        <app-nav-options
          class="mr-auto"
        />
        <app-language-selector />
      </div>
    </nav>
  </header>
</app-header>
`;
